force-app/main/default/objects/Reply_Email_Mapping__mdt/Reply_Email_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Reply Email Mapping</label>
    <pluralLabel>Reply Email Mappings</pluralLabel>
</CustomObject>