force-app/main/default/objects/Reply_Email_Mapping__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <label>Case Company Picklist Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>