force-app/main/default/objects/Reply_Email_Mapping__mdt/fields/Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Developer_Name__c</fullName>
    <label>Email Template Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>